# drf_letters

./: .gitignore  pyproject.toml  requirements.txt
chats/: models.py  serializers.py  urls.py  views.py
chats/migrations/: 0001_initial.py
drf_chat/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.5317fe3e.css
static/js/: app.bd874299.js  app.bd874299.js.map  chunk-vendors.370fb37a.js  chunk-vendors.370fb37a.js.map
templates/: index.html
users/: serializers.py  urls.py  views.py
